--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+.font-link {
+  font-family: "Montserrat", cursive;
+}
+
+.dashboard {
+  display: flex;
+  justify-content: center;
+  height: 75px;
+  width: 100%;
+}
+.banner-text {
+  text-align: left;
+  font: normal normal 600 20px/24px Montserrat;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  margin-top: 25px;
+  margin-left: 22px;
+}
+.container {
+  width: 100% !important;
+  max-width: 100% !important;
+  margin: 0px !important;
+  padding: 0 !important;
+}
